== 0.7.3

* bug fix
  * Give scope to the proper model validation

* enhancements
  * Mail views are scoped as well
  * Added update_with_password for authenticatable
  * Allow render_with_scope to accept :controller option

== 0.7.2

* deprecation
  * Renamed reset_confirmation! to resend_confirmation!
  * Copying locale is part of the installation process

* bug fix
  * Fixed render_with_scope to work with all controllers
  * Allow sign in with two different users in Devise::TestHelpers

== 0.7.1

* enhancements
  * Small enhancements for other plugins compatibility (by github.com/grimen)

== 0.7.0

* deprecations
  * :authenticatable is not included by default anymore

* enhancements
  * Improve loading process
  * Extract SessionSerializer from Authenticatable

== 0.6.3

* bug fix
  * Added trackable to migrations
  * Allow inflections to work

== 0.6.2

* enhancements
  * More DataMapper compatibility
  * Devise::Trackable - track sign in count, timestamps and ips

== 0.6.1

* enhancements
  * Devise::Timeoutable - timeout sessions without activity
  * DataMapper now accepts conditions

== 0.6.0

* deprecations
  * :authenticatable is still included by default, but yields a deprecation warning

* enhancements
  * Added DataMapper support
  * Remove store_location from authenticatable strategy and add it to failure app
  * Allow a strategy to be placed after authenticatable
  * [#45] Do not rely attribute? methods, since they are not added on Datamapper

== 0.5.6

* enhancements
  * [#42] Do not send nil to build (DataMapper compatibility)
  * [#44] Allow to have scoped views

== 0.5.5

* enhancements
  * Allow overwriting find for authentication method
  * [#38] Remove Ruby 1.8.7 dependency

== 0.5.4

* deprecations
  * Deprecate :singular in devise_for and use :scope instead

* enhancements
  * [#37] Create after_sign_in_path_for and after_sign_out_path_for hooks to be
    overwriten in ApplicationController