@@ -1,3 +1,5 @@
 * Make test run with different ORMs
 * Add registerable support
 * Add http authentication support
+* Extract SessionSerializer tests from Authenticatable
+* Extract Activatable tests from Confirmable
